--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,5 +4,12 @@ on:
   push:
 
 jobs:
-  docker-build-and-push:
+  docker-build-and-push-main:
     uses: ./.github/workflows/docker-build-and-push.template.yml
+
+  docker-build-and-push-builder:
+    uses: ./.github/workflows/docker-build-and-push.template.yml
+    with:
+      context: builder-image
+
+  
