--- a/.github/workflows/docker-build-and-push.template.yml
+++ b/.github/workflows/docker-build-and-push.template.yml
@@ -46,7 +46,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v4
         with:
-          context: ./${{ inputs.context || "." }}
+          context: ./${{ inputs.context || '.' }}
           platforms: ${{ matrix.platform }}
           labels: ${{ steps.meta.outputs.labels }}
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true,name=${{ env.image }}
